--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "id": "joplin.plugin.benji.persistentLayout",
   "app_min_version": "1.8.1",
   "version": "2.0.0",
-  "name": "Persistent Editor Layout",
+  "name": "Persistent Editor Layout (Patched by JackGruber)",
   "description": "Save the editor layout (editor/split view/viewer/rich text) for each note separately with custom tags.",
   "author": "Benji300",
   "homepage_url": "https://github.com/benji300/joplin-persistent-layout",
